<resources>
    <string name="app_name">Moments In Time</string>
    <string name="app_directory">momentsintime</string>
    <string name="api_access_token">cbcd60a11d6c8dbad7310a4074312963</string>
    <string name="upload_album">4630681</string>
    <string name="main_album">4626849</string>
    <string name="api_base_address">https://api.vimeo.com</string>
    <string name="api_version">application/vnd.vimeo.*+json;version=3.2</string>
    <string name="video_fetch_uri">/me/videos</string>
    <string name="page_number_parameter">page=</string>
    <string name="per_page_parameter">per_page=</string>
    <string name="single_video_fetch_uri">/videos/</string>
    <string name="video_availability">available</string>
    <string name="main_album_fetch">/me/albums/4626849/videos</string>
    <string name="video_to_album_address">/me/albums/4630681</string>
    <string name="community_filter">fields=uri,status,name,description,link,pictures.sizes</string>
    <string name="playable_video_filter">fields=files,link</string>
    <string name="single_moment_filter">fields=name,description,pictures,link,status</string>
    <string name="delete_moment_filter">fields=uri</string>
    <string name="upload_ticket_filter">fields=uri,complete_uri,upload_link,upload_link_secure</string>
    <string name="upload_filter">fields=uri</string>
    <string name="complete_upload_filter">fields=uri</string>
    <string name="update_metadata_filter">fields=uri</string>
    <string name="check_availability_filter">fields=status</string>
    <string name="has_failed_flag">hasFailed</string>
    <string name="has_agreed_to_terms_and_conditions">hasAgreed</string>
    <string name="is_first_visit">firstVisit</string>
    <string name="display_upload_message">displayUploadMessage</string>
    <string name="moment_primary_key">momentPrimaryKey</string>
    <string name="community">COMMUNITY</string>
    <string name="my_moments">MY MOMENTS</string>
    <string name="moment_prompt">Make a Moment</string>
    <string name="moment_prompt_cont">Nominate someone to tell their story. You can even nominate yourself!</string>
    <string name="moment_prompt_link">Let\'s make a Moment</string>
    <string name="no_moments">Where are all the moments?</string>
    <string name="no_moments_cont">Even if you\'re not ready to film, you can create the plans for an interview now.</string>
    <string name="make_a_moment">Let\'s make a moment</string>
    <string name="interviewing">Interviewing</string>
    <string name="interviewing_prompt">Select a special person to interview</string>
    <string name="topic">Topic</string>
    <string name="add_topic_prompt">Select a topic</string>
    <string name="video">Video</string>
    <string name="video_prompt">Start filming or upload a video</string>
    <string name="notes">Notes</string>
    <string name="notes_prompt">Add a new note</string>
    <string name="video_dialog_title">Video Options</string>
    <string name="note_dialog_title">Note</string>
    <string name="note_hint">Note</string>
    <string name="note_toolbar_title">Note</string>
    <string name="interviewing_toolbar_title">Interviewing</string>
    <string name="interviewing_name_hint">Name</string>
    <string name="interviewing_relation_hint">Relation</string>
    <string name="add_a_picture">Add a Picture (optional)</string>
    <string name="topic_toolbar_title">Topic</string>
    <string name="topic_prompt">Choose a topic or make your own</string>
    <string name="topic_prompt_highlight">make your own</string>
    <string name="create_topic_toolbar_title">Create a Topic</string>
    <string name="topic_headline">Headline(short and sweet)</string>
    <string name="topic_question">Question/Theme</string>
    <string name="terms_and_conditions_toolbar_title">Terms and Conditions</string>
    <string name="terms_and_conditions_content">Moments in Time Terms of Service ("Terms")\n\nLast updated: May 30, 2017\n\nPlease read these Terms of Service ("Terms", "Terms of Service") carefully before using the Moments In Time for iPhone and Android website (the "Service") operated by Moments in Time ("us", "we", or "our").\n\nYour access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.\n\nBy accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service. This Terms of Service is licensed by TermsFeed Generator to Moments in Time.
Links To Other Web Sites\n\nOur Service may contain links to third-party web sites or services that are not owned or controlled by Moments in Time.\n\nMoments in Time has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that Moments in Time shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.\n\nWe strongly advise you to read the terms and conditions and privacy policies of any third-party web sites or services that you visit.
Governing Law\n\nThese Terms shall be governed and construed in accordance with the laws of Georgia, United States, without regard to its conflict of law provisions.\n\nOur failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service.
Changes\n\nWe reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.\n\nBy continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, please stop using the Service.
Contact Us \n\nIf you have any questions about these Terms, please contact us.</string>
    <string name="privacy_policy_toolbar_title">Privacy Policy</string>
    <string name="privacy_policy_url">https://www.dropbox.com/s/r84k05bai96vylq/Privacy_Policy_v1_pub.docx?dl=0</string>
    <string name="terms_and_conditions_accept">Accept</string>
    <string name="save_item">Save</string>
    <string name="star_of_david">Star of David</string>
    <string name="state_private">Private</string>
    <string name="state_uploading">Uploading...</string>
    <string name="state_failed">Upload failed! Tap to retry</string>
    <string name="state_live">Live</string>
    <string name="moment_title">Title</string>
    <string name="moment_description"></string>
    <string name="welcome_message_title">Welcome to Moments In Time!</string>
    <string name="welcome_message_content">Watch stories from the community and get inspired to share your own Moments. Scroll down to start.</string>
    <string name="welcome_message_moment_prompt">Ok, let\'s go!</string>
    <string name="upload_message_title">Your Moment is live!</string>
    <string name="upload_message_content">The Moments moderators will review your post before adding it to the community. In the mean time, feel free to share your awesome creation.</string>
    <string name="upload_message_prompt">Share your Moment</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="submit_confirmation_dialog_title">Show the world?</string>
    <string name="submit_confirmation_dialog_content">By submitting this video you’re allowing Moments In Time to share this video to the public. Is that okay?</string>
    <string name="submit_confirmation_dialog_positive">Yes</string>
    <string name="submit_confirmation_dialog_negative">No</string>
    <string name="cant_delete_title">Oh No!</string>
    <string name="cant_delete_content">Sorry, but you\'ll need to wait until the upload is finished to modify this Moment</string>
    <string name="cant_delete_ok">OK</string>
    <string name="in_development_title">Coming Soon</string>
    <string name="in_development_content">Feature in development. It will be ready in no time!</string>
    <string name="in_development_ok">Cool!</string>
    <string name="edit_video_title">Edit until your heart is content</string>
    <string name="edit_video_content">The video has been saved to your gallery. You can edit the video with your favorite tools and update this Moment with the new video when you\'re ready. Nothing will be uploaded until you say so.</string>
    <string name="edit_video_positive_text">OK</string>
    <string name="edit_video_camera_roll">Upload new video</string>
    <string name="terms_and_conditions_dialog_title">Terms and Conditions</string>
    <string name="terms_and_conditions_dialog_content">I have read, and agree to the Moments In Time Terms and Conditions</string>
    <string name="terms_and_conditions_positive_text">Accept</string>
    <string name="terms_and_conditions_negative_text">Cancel</string>
    <string name="privacy_policy_dialog_title">Privacy Policy</string>
    <string name="privacy_policy_dialog_content">I have read, and agree to the Moments In Time Privacy Policy</string>
    <string name="privacy_policy_positive_text">Accept</string>
    <string name="privacy_policy_negative_text">Cancel</string>
    <string name="note_dialog_delete">Delete</string>
    <string name="video_processing_dialog_title">Almost there!</string>
    <string name="video_processing_dialog_content">Your Moment uploaded successfully and is being processed. Check back soon!</string>
    <string name="video_processing_dialog_prompt">OK</string>
    <string name="feedback_dialog_title">We\'re glad you\'re here.</string>
    <string name="feedback_dialog_content">We want this to be a warm and enriching community, and that takes feedback from you. How are we doing?</string>
    <string name="feedback_dialog_positive">Cancel</string>
    <string name="app_review_dialog_title">Thanks for the love!</string>
    <string name="app_review_dialog_content">Would you like to share your love and spread the word by giving us a 5-star rating on the Google Play Store?</string>
    <string name="app_review_dialog_positive_text">Yes!</string>
    <string name="app_review_dialog_negative_text">Not now</string>
    <string name="contact_share_dialog_title">Would you like to message %1$s about the interview?</string>
    <string name="contact_share_negative_text">Not now</string>
    <string name="sms_message">Check out this story on Moments In Time! \n</string>
    <string name="email_subject">Moment Video Report</string>
    <string name="email_recipient">justinmilrad@gmail.com</string>
    <string name="email_content">Hello, I would like to report this video: </string>
    <string name="email_report_subject">Moments in Time Feedback</string>
    <string name="email_report_content">Hello, I have a problem.</string>
    <string name="email_invite_subject">Moments in Time Interview</string>
    <string name="contact_invite_content_no_title">Hi, I think you’d be a great candidate to interview for the Moments in Time Project. The videos are short 1-4 minute videos telling stories. It’s quick and easy. When would you be available? \nYou can check out the app at %1$s</string>
    <string name="contact_invite_store_link">http://play.google.com/store/apps/details?id=</string>
    <string name="marketplace_address">market://details?id=</string>
</resources>